# Advent-Calendar

./: CMakeLists.txt  Main.qml  README.md  main.cpp  resources.qrc
backend/components/: calendarcomponents.cpp  calendarcomponents.h  componentservices.cpp  componentservices.h  mediacomponents.cpp  mediacomponents.h
backend/config/: Constants.h
backend/data/: calendardata.cpp  calendardata.h
backend/dto/: calendardto.cpp  calendardto.h
backend/libs/: datalibs.cpp  datalibs.h
backend/services/: systemservices.cpp  systemservices.h
frontend/components/: BgMusic.qml  Calendar.qml  Letter.qml  Snow.qml  Sparks.qml  Surprise.qml  VMediaPlayer.qml
frontend/components/surprise/: MediaSurprise.qml  TextSurprise.qml
